# mail_merge

./: .env.example  .gitignore  LICENSE  QUICKSTART.md  README.md  config.example.yaml  pyproject.toml  requirements.txt
data/: contacts.example.csv
docs/: HANDBOOK.md
mailmerge/: __init__.py  __main__.py  cli.py  config.py  contacts.py  context.py  db.py  inbox.py  pipeline.py  reporting.py  sender.py  templates.py  utils.py  validation.py
resume/: PUT_YOUR_RESUME_HERE.txt
templates/: direct.txt  followup1.txt  followup2.txt  warm.txt
tests/: conftest.py  fakedata.py  test_cli.py  test_config.py  test_contacts_import.py  test_context.py  test_db.py  test_inbox.py  test_pipeline.py  test_reporting.py  test_sender.py  test_sync.py  test_templates.py  test_utils.py
